# web_crawler

./: .gitignore  crawl_artificial_intelligence_trends_2024_20250524_115834.json  crawler.py  crawler2.py  main.py  pyproject.toml  results.json
