[project]
name = "serper3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "firecrawl>=2.7.0",
    "langchain-core>=0.3.61",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.13",
    "mcp[cli]>=1.9.1",
    "requests>=2.32.3",
]
